--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,6 @@ body{
 }
 
 
+/*<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="css/styles.css"> */
